Version 1.2.x (2010-xx-xx)
	Added new chunking support for Chrome 5 and Firefox 3.6 using the HTML 5 runtime.
	Added new multipart upload support for Chrome 6 using the HTML 5 runtime.
	Added new image scaling method for the Flash runtime contributed by rcoopman.
Version 1.2.3 (2010-05-27)
	Added new drag/drop support for HTML5 running on Chrome beta.
	Added new multipart state for the features object. It's now possible to detect multipart support.
	Added new getFeatures function to all runtime. Basic concept by Javier Martinez Fernandez.
	Fixed bug where runtimes where initialized even if they didn't match the required_features setting.
Version 1.2.2.1 (2010-05-04)
	Added new headers option, enables you to set custom headers for the upload requests.
	Fixed bug where the file extension checking was case sensitive.
Version 1.2.2 (2010-04-26)
	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.
	Added new FILE_SIZE_ERROR type that will be triggered if the user selected a file that is to large or zero bytes.
	Added new FILE_EXTENSION_ERROR type that will be triggered if you add a file with an invalid file extension.
	Added new required_features setting, enables you to specify a list of required features that the runtime must have.
	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
	Fixed so that all file types can be selected if you don't specify a filter setting.
	Fixed so more valid HTTP status codes are accepted as valid responses.
	Fixed so all runtimes fills the features object with available features.
	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
	Fixed some conflict issues with HTML4 runtime and forms with the input names of action or target.
	Fixed bug where some Gecko versions would produce exceptions when checking the HTTP status of a XHR.
Version 1.2.1 (2010-03-22)